--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="/r/GofD Game of Dice Character Enhancement Calculator : ">
+    <meta name="description" content="/r/GofD Character Enhancement Calculator : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>/r/GofD Game of Dice Character Enhancement Calculator</title>
+    <title>/r/GofD Character Enhancement Calculator</title>
   </head>
 
   <body>
