--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
 
-          <h1 id="project_title">/r/GofD Game of Dice Character Enhancement Calculator</h1>
+          <h1 id="project_title">/r/GofD Character Enhancement Calculator</h1>
           <h2 id="project_tagline"></h2>
 
         </header>
