js why you no work

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <input type="button" value="CALCULATE">
+        <input type="button" name="btn_calc" value="CALCULATE">
       </section>
     </div>
 
