--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
     <script type="text/javascript" src="jquery-1.12.0.js"></script>
-    <script src="javascripts/main.js"></script>
+    <script type="text/javascript" src="javascripts/main.js"></script>
 
     <title>/r/GofD Character Enhancement Calculator</title>
   </head>
