--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="/r/GofD Character Enhancement Calculator : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-    <script type="text/javascript" src="javascripts/jquery-1.12.0.js"></script>
-    <script type="text/javascript" src="javascripts/main.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="javascripts/main.js"></script>
 
     <title>/r/GofD Character Enhancement Calculator</title>
   </head>
