--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="javascripts/main.js"></script>
 
+    <script>
+      $("#btn_calc").on("click", function() {
+        alert("some shit got clicked!")
+      });
+    </script>
     <title>/r/GofD Character Enhancement Calculator</title>
   </head>
 
