--- a/index.html
+++ b/index.html
@@ -32,7 +32,23 @@
 
     <!-- MAIN CONTENT -->
     <div id="calculator">
-      <div class="buttons">
+      <div class="nextlvl"></div>
+      <div class="maxlvl"></div>
+      <div class="dd">
+        <select id="ddrank">
+          <option value="1">DIAMOND</option>
+          <option value="2">PLATINUM</option>
+          <option value="3">GOLD</option>
+          <option value="4">5★</option>
+          <option value="5">4★</option>
+          <option value="6">3★</option>    
+        </select>
+      </div>
+      <div class="tb">
+         <input placeholder="VIP LVL">
+         <input placeholder="CHAR LVL">
+      </div>
+      <div class="button">
          <span>CALCULATE</span>
       </div>
     </div>
