--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="/r/GofD Character Enhancement Calculator : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="javascripts/main.js"></script>
 
     <script>
