--- a/index.html
+++ b/index.html
@@ -30,16 +30,17 @@
 
     <!-- MAIN CONTENT -->
     <div id="calculator">
-      <div class="nextlvl"></div>
+      <div class="misc"></div>
       <div class="maxlvl"></div>
       <div class="dd">
         <select id="ddrank">
-          <option value="1">DIAMOND</option>
-          <option value="2">PLATINUM</option>
-          <option value="3">GOLD</option>
-          <option value="4">5★</option>
-          <option value="5">4★</option>
-          <option value="6">3★</option>    
+          <option value="" disabled selected>RANK</option>
+          <option value="DIAMOND">DIAMOND</option>
+          <option value="PLATINUM">PLATINUM</option>
+          <option value="GOLD">GOLD</option>
+          <option value="5★">5★</option>
+          <option value="4★">4★</option>
+          <option value="3★">3★</option>    
         </select>
       </div>
       <div class="tb">
